fixes rightside overflow on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
+
 }
 
 code {
@@ -13,3 +15,6 @@ code {
 }
 
 /* * { border: 1px solid red !important; } */
+html,body{
+  overflow-x: hidden;
+}
